-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
-
53f3fc10d (dev), 4c5d629e0 (6.7)
There is an error with demo files about purchasing on android platform.
to replicate, you can open hangman example from qt6.7 and compile it with Android Qt6.7, there is a compile error :
/hangman/purchasing/android/androidinapppurchasebackend.cpp:23: error: cannot pass object of non-trivial type 'QtJniTypes::Context' through variadic constructor; call will abort at runtime [-Wnon-pod-varargs]
QNativeInterface::QAndroidApplication::context(),
^
Can you help me with that ?