Hangman: fix build on Android

The Context object is no longer a POD-type. But we can rely on signature
deduction here anyway, so remove the explicit signature so that the
respective template overload is used.

Pick-to: 6.7
Fixes: QTBUG-119996
Change-Id: I6b15324b13f5d3e9d52b1ac9a29dc7a25965daab
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>